test/good/input/read07.px

print readRat() * readRat()
Rat x = readRat()
print x
