test/bad/functions/void2.px

func f() def
    return

x = f()
